--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" href="/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
-  </head>
-  <body>
-<!--    <div id="relazonContainer"></div>-->
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+</head>
+<body class="h-screen w-screen">
+<h1>Some content</h1>
+<div>so more text too</div>
+<script type="module" src="/src/main.ts"></script>
+</body>
 </html>
